<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application.name">DevBook v1</string>

    <string name="label.drawer.open">Open</string>
    <string name="label.drawer.close">Close</string>

    <string name="label.menu.oneparagraph">Android</string>
    <string name="label.menu.twoparagraphs">iOS</string>
    <string name="label.menu.threeparagraphs">Backend</string>


    <string name="label.action.refresh">Refresh</string>

    <string name="activity_splash">splash</string>
    <string name="activity_home">home</string>
    <string name="fragment_lorem">Lorem</string>

    <string name="link_article">link</string>
    <string name="link_action">click</string>

    <!-- Drawer -->
    <string name="drawer_item_android">Android</string>
    <string name="drawer_item_ios">iOS</string>
    <string name="drawer_item_backend">Backend</string>
    <string name="drawer_item_favorite">Favorite</string>
    <string name="drawer_item_section_header">Settings</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <!-- Detail -->
    <string name="detail">Detail</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="skype">Skype</string>
    <string name="email">Email</string>
    <string name="department">Department</string>
    <string name="position">Position</string>
    <string name="favorite_already_added">Already added to Favorite!</string>
    <string name="favorite_saved">Add to Favorite successful!</string>
    <string name="favorite_deleted">Delete favorite successful!</string>


</resources>