<!--
  Copyright 2014 Soichiro Kashima

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:fab="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false">

    <ImageView
        android:id="@+id/detail_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_flexible_space_image_height"
        android:scaleType="centerCrop"
        android:src="@drawable/example"/>

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/detail_flexible_space_image_height"
        android:fillViewport="true"
        android:overScrollMode="never"

        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color.white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_icon_phone"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application.name"
                        android:textColor="@color/color.black"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_short"
                        android:text="@string/phone"
                        android:textColor="@color/color.black.alpha"
                        android:textSize="@dimen/text_small"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:background="@color/divider">

                    </View>
                </LinearLayout>
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_icon_email"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application.name"
                        android:textColor="@color/color.black"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_short"
                        android:text="@string/email"
                        android:textColor="@color/color.black.alpha"
                        android:textSize="@dimen/text_small"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:background="@color/divider">

                    </View>

                </LinearLayout>
            </LinearLayout>

            <!-- Skype -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_icon_skype"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_skype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application.name"
                        android:textColor="@color/color.black"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_short"
                        android:text="@string/skype"
                        android:textColor="@color/color.black.alpha"
                        android:textSize="@dimen/text_small"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:background="@color/divider">

                    </View>
                </LinearLayout>
            </LinearLayout>
            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_icon_location"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application.name"
                        android:textColor="@color/color.black"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_short"
                        android:text="@string/location"
                        android:textColor="@color/color.black.alpha"
                        android:textSize="@dimen/text_small"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:background="@color/divider">

                    </View>
                </LinearLayout>
            </LinearLayout>

            <!-- Department -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_icon_department"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application.name"
                        android:textColor="@color/color.black"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_short"
                        android:text="@string/department"
                        android:textColor="@color/color.black.alpha"
                        android:textSize="@dimen/text_small"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:background="@color/divider">

                    </View>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>


    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">


        <View
            android:id="@+id/header_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_header_height"
            android:background="@color/color.black.alpha"
            android:minHeight="@dimen/detail_header_height"/>

        <LinearLayout
            android:id="@+id/header_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_header_height"
            android:minHeight="@dimen/detail_header_height"
            android:orientation="horizontal">
            <!-- Tempory -->
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:src="@mipmap/ic_launcher"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_standard"
                    android:text="@string/application.name"
                    android:textColor="@color/color.white"
                    android:textSize="@dimen/text_large"/>

                <TextView
                    android:id="@+id/detail_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_standard"
                    android:text="@string/application.name"
                    android:textColor="@color/color.white"
                    android:textSize="@dimen/text_extra_small"/>
            </LinearLayout>

        </LinearLayout>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/detail_btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginTop="@dimen/detail_margin_floting_button"
            android:src="@mipmap/ic_launcher"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_pressed"
            fab:fab_colorRipple="@color/ripple"/>
    </FrameLayout>


</FrameLayout>
